# SoulAnalyzer

./: LICENSE  README.md  pyproject.toml
src/soulanalyzer/: __init__.py  cli.py  main.py
src/soulanalyzer/backend/: MLData.py  SoulAnalyzer.py
tests/: conftest.py
